[tool.poetry]
name = "purin-nlp"
version = "0.1.0"
description = ""
authors = ["s2terminal"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"
streamlit = "^1.2.0"
pandas = "^1.3.4"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
