[tool.poetry]
name = "purin-nlp"
version = "0.1.0"
description = ""
authors = ["s2terminal"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.1"
requests = "^2.26.0"
numpy = "^1.21.4"
scipy = "^1.7.3"
joblib = "^1.1.0"
scikit-learn = "^1.0.1"
Janome = "^0.4.1"
pandas = "^1.3.4"
tf-nightly = "^2.8.0-alpha.20211217"
transformers = "^4.14.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"
streamlit = "^1.2.0"
pandas = "^1.3.4"
pytest = "^6.2.5"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
